--- a/WebRegister/Web.config
+++ b/WebRegister/Web.config
@@ -51,7 +51,7 @@
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
-  <customErrors mode="RemoteOnly" defaultRedirect="Index.cshtml"/>
+  <customErrors mode="Off"/>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
