--- a/WebRegister/Web.config
+++ b/WebRegister/Web.config
@@ -51,7 +51,16 @@
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
-  <customErrors mode="Off"/>
+  <customErrors mode="On"
+   defaultRedirect="~/Views/Home/Index.cshtml">
+
+    <error statusCode="403"
+      redirect="~/Views/Shared/Error.cshtml" />
+
+    <error statusCode="404"
+      redirect="~/Views/Shared/Error.cshtml" />
+
+  </customErrors>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
