--- a/WebRegister/Web.config
+++ b/WebRegister/Web.config
@@ -48,7 +48,7 @@
   </appSettings>
 
   <system.web>
-    <customErrors mode="On"
+    <!--<customErrors mode="On"
    defaultRedirect="~/Views/Home/Index.cshtml">
 
       <error statusCode="403"
@@ -57,7 +57,8 @@
       <error statusCode="404"
         redirect="~/Views/Shared/Error.cshtml" />
 
-    </customErrors>
+    </customErrors>-->
+    <customErrors mode="Off"></customErrors>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
