--- a/WebRegister/Web.config
+++ b/WebRegister/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DevDbName" connectionString="Data Source=webregister.database.windows.net;Initial Catalog=Dev;User ID=Magesh;Password=Q1w2e3r4t5y6!" providerName="System.Data.SqlClient"/>
+    <add name="DevDbName" connectionString="Data Source=webregister.database.windows.net;Initial Catalog=Dev;User ID=Magesh;Password=*********" providerName="System.Data.SqlClient"/>
     <!--Microsoft.Eco.CustomAspNetViewState.SqlViewStatePersister class will read this property. -->
     <add name="ViewStateServer" connectionString="Data Source=MAGESH\MAGESHSQLDB;Initial Catalog=Dev;Integrated Security=True" providerName="System.Data.SqlClient"/>
     <add name="LoggingDbName" connectionString="Data Source=MAGESH\MAGESHSQLDB;Initial Catalog=Dev;Integrated Security=True" providerName="System.Data.SqlClient"/>
