--- a/WebRegister/Web.config
+++ b/WebRegister/Web.config
@@ -26,12 +26,12 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="CommandTimeoutSeconds" value="120"/>
-    <add key="GetFromEmailAddress" value="testingforemail12@gmail.com"/>
-    <add key="ServiceEmailAddress" value="testingforemail12@gmail.com"/>
+    <add key="GetFromEmailAddress" value="********@gmail.com"/>
+    <add key="ServiceEmailAddress" value="********@gmail.com"/>
     <add key="GetFromPassword" value="ph9566995198"/>
-    <add key="GetFromEmailAddressOfficial" value="uatserviceemail@getsettech.onmicrosoft.com"/>
-    <add key="ServiceEmailAddressOfficial" value="uatserviceemail@getsettech.onmicrosoft.com"/>
-    <add key="GetFromPasswordOfficial" value="(Getset*Getset)"/>
+    <add key="GetFromEmailAddressOfficial" value="************"/>
+    <add key="ServiceEmailAddressOfficial" value="*****************"/>
+    <add key="GetFromPasswordOfficial" value="*************"/>
     <add key="enableSimpleMembership" value="true"/>
     <add key="UserTableName" value="WebSecurityUserProfile"/>
     <add key="UserIdColumn" value="WebSecurityUserProfileId"/>
@@ -43,7 +43,7 @@
     <add key="ComponentName" value="GetSetUI" />
     <add key="AttachmentPath" value="~/Upload/{0}/{1}" />
     <add key="HomeURL" value="http://localhost/Home/DashBoard"/>
-    <add key="EWSUrl" value="https://emea.cloudmail.microsoft.com/ews/exchange.asmx" />
+    <add key="EWSUrl" value="https:--//exchange service url--" />
 
   </appSettings>
 
